--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "In-process cron scheduler that accepts a job and executes it periodically.",
   "main": "main.js",
+  "type": "module",
   "scripts": {
     "start": "npm run dev",
     "dev": "NODE_ENV=development nodemon --max-old-space-size=4096 main.js",
@@ -19,7 +20,11 @@
   },
   "homepage": "https://github.com/VeroZaki/lightweight-cron#readme",
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "lodash": "^4.17.21",
     "mongoose": "^8.5.2",
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "winston": "^3.13.1"
   }
 }
