--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/VeroZaki/lightweight-cron#readme",
   "dependencies": {
+    "bullmq": "^5.12.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "lodash": "^4.17.21",
