--- a/package.json
+++ b/package.json
@@ -21,12 +21,17 @@
   "homepage": "https://github.com/VeroZaki/lightweight-cron#readme",
   "dependencies": {
     "bullmq": "^5.12.0",
+    "chai": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jest": "^29.7.0",
     "lodash": "^4.17.21",
     "mocha": "^10.7.0",
+    "mockdate": "^3.0.5",
     "mongoose": "^8.5.2",
+    "proxyquire": "^2.1.3",
     "shortid": "^2.2.16",
+    "sinon": "^18.0.0",
     "winston": "^3.13.1"
   }
 }
