--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "NODE_ENV=development nodemon --max-old-space-size=4096 main.js",
-    "test": "NODE_ENV=testing mocha './testCases/**/*.test.js' --recursive --timeout 100000 --exit"
+    "test": "NODE_ENV=testing mocha './testCases/**/*.test.js' --recursive --timeout 100000 --exit",
+    "build": "npm run build:tsc",
+    "build:tsc": "tsc"
   },
   "repository": {
     "type": "git",
@@ -29,6 +31,7 @@
     "mocha": "^10.7.0",
     "mockdate": "^3.0.5",
     "mongoose": "^8.5.2",
+    "nodemon": "^3.1.4",
     "proxyquire": "^2.1.3",
     "shortid": "^2.2.16",
     "sinon": "^18.0.0",
